--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,8 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+<h1>Marvellous Infosystem</h1>
+<form>
+  <div class="form-group">
+    <label for="name"> Name </label>
+    <input type="text" class="form-control" id="MarvellousLabel" >
+  </div>
 
 
 
