--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,9 +1,4 @@
-<h1>Marvellous Infosystem</h1>
-<form>
-  <div class="form-group">
-    <label for="name"> Name </label>
-    <input type="text" class="form-control" id="MarvellousLabel" >
-  </div>
-
+<h1>Welcome to {{title}}</h1>
+<app-demo> </app-demo>>
 
 
